Update the code to not use the deprecated Chex assertions.
PiperOrigin-RevId: 549346418

--- a/examples/JAX_+_Triton_Flash_Attention.ipynb
+++ b/examples/JAX_+_Triton_Flash_Attention.ipynb
@@ -710,9 +710,9 @@
         "  del v\n",
         "\n",
         "  jax_out = jax_attention(q_jax, k_jax, v_jax)\n",
-        "  chex.assert_tree_all_close(tri_out, jax_out, atol=0.003)\n",
+        "  chex.assert_trees_all_close(tri_out, jax_out, atol=0.003)\n",
         "  jax_out = jax_attention_triton(q_jax, k_jax, v_jax)\n",
-        "  chex.assert_tree_all_close(tri_out, jax_out, atol=0.003)\n",
+        "  chex.assert_trees_all_close(tri_out, jax_out, atol=0.003)\n",
         "\n",
         "test_triton_jax(2, 32, 2048, 64)"
       ],
@@ -729,8 +729,8 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "WARNING:absl:chex.assert_tree_all_close has been renamed to chex.assert_trees_all_close, please update your code.\n",
-            "WARNING:absl:chex.assert_tree_all_close has been renamed to chex.assert_trees_all_close, please update your code.\n"
+            "WARNING:absl:chex.assert_trees_all_close has been renamed to chex.assert_trees_all_close, please update your code.\n",
+            "WARNING:absl:chex.assert_trees_all_close has been renamed to chex.assert_trees_all_close, please update your code.\n"
           ]
         }
       ]
